# homelab-autopilot

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  phase_tracker.md  task.md
.github/workflows/: pylint.yml
config/: homelab-autopilot-proxmox.yaml.example  homelab-autopilot.yaml.example
core/: backup_engine.py  config_loader.py
cov_annotate/: z_0ba57fef295dd733_generic.py,cover  z_306ed2d68c6501e8_logger.py,cover  z_306ed2d68c6501e8_state_manager.py,cover  z_306ed2d68c6501e8_utils.py,cover  z_57760688d1f824db_backup_engine.py,cover  z_57760688d1f824db_config_loader.py,cover  z_a8790ba201ed243d_proxmox.py,cover  z_e73236870873ac66_base.py,cover
docs/: README.md  architecture.md  discovery-tool.md
lib/: logger.py  state_manager.py  utils.py
plugins/: base.py
plugins/hypervisors/: proxmox.py
plugins/services/: generic.py
tests/: conftest.py  test_backup_engine_execute_command.py  test_backup_engine_full_orchestration.py  test_backup_engine_get_config.py  test_backup_engine_get_plugin.py  test_backup_engine_notification.py  test_backup_engine_orchestration.py  test_backup_engine_plugin_cache.py  test_backup_engine_queries.py  test_backup_engine_rotation.py  test_backup_engine_state.py  test_backup_engine_verification.py  test_config_loader.py  test_create_backup_metadata.py  test_determine_backup_destination.py  test_generate_backup_filename.py  test_generic_service_plugin.py  test_get_backup_directory.py  test_get_backup_files.py  test_logger.py  test_plugin_base.py  test_proxmox_plugin.py  test_state_manager.py  test_utils.py
tests/fixtures/: invalid_config.yaml  invalid_direct_config.yaml  invalid_pbs_config.yaml  merge_override.yaml  minimal_config.yaml  valid_config.yaml  (+3 more)
