[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-autopilot"
version = "0.1.0-alpha"
description = "Safe, automated maintenance for your homelab infrastructure"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Homelab Autopilot Contributors"}
]
keywords = ["homelab", "automation", "backup", "monitoring", "proxmox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/bryanfree66/homelab-autopilot"
Repository = "https://github.com/bryanfree66/homelab-autopilot"
Issues = "https://github.com/bryanfree66/homelab-autopilot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "lib*", "plugins*"]
exclude = ["tests*", "docs*", "scripts*", "templates*", "config*", "bin*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint.messages_control]
max-line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=core --cov=lib --cov=plugins --cov-report=html --cov-report=term"
